# fastapi_skeleton

./: .env copy  docker-compose.yml  pyproject.toml  setup.cfg
app/: .env  alembic.ini  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 2559ba58f0d3_adding_student.py  445749daa0cd_initial.py  52db072dfd49_initial.py  7516e0fb3c30_adding_some_models.py  92014f49cc00_initial.py  e1c671c6bbca_add_year.py
app/src/: main.py
app/src/api/api_v1/: handlers.py  login_api.py  recognition.py  users_api.py
app/src/core/: settings.py  utils.py
app/src/db/: crud.py  models.py  schemas.py  session.py
app/src/db/models/: users.py
