    [tool.aerich]
tortoise_orm = "src.core.db_config.DB_CONFIG"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = ""
authors = ["Maksat Hemdemow <thehighestintheroom00@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_skeleton"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-decouple = "^3.8"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
