[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Maksat Hemdemow <thehighestintheroom00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.88.0"
uvicorn = "^0.23.2"
sqlalchemy = "1.4.45"
flake8 = "^6.1.0"
black = "^23.7.0"
alembic = "^1.11.2"
python-jose = "^3.3.0"
python-decouple = "^3.8"
passlib = "^1.7.4"
asyncpg-utils = "^0.6.0"
asyncpg = "0.27.0"
greenlet = "2.0.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
